@@ -1,3 +1,7 @@
+2002-04-17  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/gdomap.c: re-order headers so config.h is used on windoze
+
 2002-04-16  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* config/config.reuseaddr.c: New test for broken SO_REUSEADDR
